# declarative_enum_dispatch

./: Cargo.toml  LICENSE  README.md
examples/: example.rs
src/: lib.rs
