[package]
name = "declarative_enum_dispatch"
version = "0.1.1"
edition = "2021"
authors = ["Zettroke <zettroke@protonmail.com>"]
repository = "https://github.com/Zettroke/declarative_enum_dispatch"
description = "Declarative macro generating boilerplate for enum dispatch"
readme = "README.md"
categories = ["rust-patterns"]
keywords = ["traits", "dynamic"]
license = "MIT OR Apache-2.0"
